<resources>
    <string name="play_app_name">AndroidPlay</string>
    <string name="play_title_home">首页</string>
    <string name="play_title_knowledge">体系</string>
    <string name="play_title_notifications">导航</string>
    <string name="play_title_pro">项目</string>
    <string name="play_nav_header_desc">Descr</string>
    <string name="play_nav_header_title">header</string>
    <string name="play_nav_header_subtitle">subtitle</string>
    <string name="play_navigation_drawer_open">Open drawer</string>
    <string name="play_navigation_drawer_close">Close drawer</string>
    <string name="play_main_home">首页</string>
    <string name="play_main_system">体系</string>
    <string name="play_main_project">项目</string>
    <string name="play_main_navigation">导航</string>

    <string name="play_main_exit">"再点击一次退出"</string>
    <string name="play_action_search">Search</string>
    <string name="play_useful_sites">web_collection</string>


    <string name="play_collection">Collection</string>
    <string name="play_un_collection">Cancel Collection</string>
    <string name="play_input_user_name">请输入用户名</string>
    <string name="play_input_user_pass">请输入密码</string>
    <string name="play_login">登录</string>
    <string name="play_input_user_email">请输入邮箱</string>
    <string name="play_input_pass">请输入密码</string>
    <string name="play_input_pass_again">请再次输入密码</string>


</resources>
